--- a/api/templates/bookings.html
+++ b/api/templates/bookings.html
@@ -119,7 +119,7 @@
                     <tbody id="tbody">
                         {% for booking in today_bookings %}
                         <tr>
-                            <td>{{ booking.c_note_number }}</td>
+                            <td><a class="text-decoration-none" href="{% url 'tracking_page' booking.c_note_number %}" target="_blank">{{ booking.c_note_number }}</a></td>
                             <td>{{ booking.to_destination }}</td>
                             <td>{{ booking.ref_courier_name }}</td>
                             <td>
@@ -140,15 +140,15 @@
     <div class="row text-center">
         <hr>
         <h3 class="text-center"><b>Advance Filters</b></h3>
-        <form action="" method="post" class="g-3">
+        <form method="post" class="g-3">
             {% csrf_token %}
             <div class="row justify-content-evenly mx-2 border border-1 p-2">
                 <div class="col-md-4">
-                    <label for="datetime"><b>From Date</b></label>
+                    <label for="from_datetime"><b>From Date</b></label>
                     <input type="date" id="from_datetime" name="from_datetime" class="form-control" name="date-field" />
                 </div>
                 <div class="col-md-4">
-                    <label for="datetime"><b>To Date</b></label>
+                    <label for="to_datetime"><b>To Date</b></label>
                     <input type="date" id="to_datetime" name="to_datetime" class="form-control" name="date-field" />
                 </div>
                 <div class="col-md-2 mt-4 d-grid gap-2 mb-3">
@@ -157,7 +157,7 @@
             </div>
         </form>
         <div class="col-md-6 mt-2">
-            <form action="" method="post" class="g-3">
+            <form method="post" class="g-3">
                 {% csrf_token %}
                 <div class="row justify-content-evenly mx-1 border border-1 p-2">
                     <div class="col-md-8">
@@ -172,7 +172,7 @@
 
         </div>
         <div class="col-md-6 mt-2">
-            <form action="" method="post" class="g-3">
+            <form method="post" class="g-3">
                 {% csrf_token %}
                 <div class="row justify-content-evenly mx-1 border border-1 p-2">
                     <div class="col-md-8">
@@ -195,8 +195,8 @@
     var now = new Date();
     now.setMinutes(now.getMinutes() - now.getTimezoneOffset());
     document.getElementById('datetime').value = now.toISOString().slice(0, 16);
-    document.getElementById('from_datetime').valueAsDate = new Date();
-    document.getElementById('to_datetime').valueAsDate = new Date();
+    document.getElementById('from_datetime').valueAsDate = now;
+    document.getElementById('to_datetime').valueAsDate = now;
 </script>
 
 <!-- https://stackoverflow.com/questions/1317714/how-can-i-filter-a-date-of-a-datetimefield-in-django -->
