--- a/api/static/css/dashboard.css
+++ b/api/static/css/dashboard.css
@@ -15,6 +15,10 @@
     background-color: rgba(240, 230, 240, 0.628);
 }
 
+.red_color {
+    color: red !important;
+}
+
 @media only screen and (max-width: 768px) {
     .second_space {
         margin-top: 20px;
