--- a/api/templates/booking_ajax.html
+++ b/api/templates/booking_ajax.html
@@ -33,6 +33,7 @@
     });
 
     // For Date wise search
+
     $("#date_search_btn").click(function() {
         let from_date = $("#from_datetime").val();
         let to_date = $("#to_datetime").val();
@@ -55,7 +56,7 @@
                         output += "<tr><td><a class='text-decoration-none' href=/tracking/" + new_data[i].c_note_number + " target='_blank'>" + new_data[i].c_note_number + "</a></td><td>" + new_data[i].to_destination__name + "</td><td>" + new_data[i].ref_courier_name__name + "</td><td>" + '<input type="button" class="btn btn-warning btn-sm edit-btn" id="edit_booking" value="Edit" data-sid=' + new_data[i].id + '></td></tr>'
                         $("#tbody").html(output);
                     }
-                    document.querySelectorAll('.booked_data')[0].focus();
+                    $("h4[tabindex=0]").focus();
                 } else {
                     alert("No records found in between dates.");
                 }
@@ -64,7 +65,9 @@
     })
 
     // For C NOTE NUMBER wise search
-    $("#c_note_search_btn").click(function() {
+    // $("#c_note_search_btn").click(function() {
+    $("#c_note_wise_search").submit(function(e) {
+        e.preventDefault()
         let c_note_number = $("#c_note_search").val();
         if (c_note_number == "") {
             alert("Please enter correct C. Note number")
@@ -87,7 +90,7 @@
                             output += "<tr><td><a class='text-decoration-none' href=/tracking/" + new_data[i].c_note_number + " target='_blank'>" + new_data[i].c_note_number + "</a></td><td>" + new_data[i].to_destination__name + "</td><td>" + new_data[i].ref_courier_name__name + "</td><td>" + '<input type="button" class="btn btn-warning btn-sm edit-btn" id="edit_booking" value="Edit" data-sid=' + new_data[i].id + '></td></tr>'
                             $("#tbody").html(output);
                         }
-                        document.querySelectorAll('.booked_data')[0].focus();
+                        $("h4[tabindex=0]").focus();
                     } else {
                         alert("No records found for this consignment number");
                     }
@@ -98,7 +101,9 @@
     })
 
     // For C NOTE NUMBER wise search
-    $("#ref_num_search_search_btn").click(function() {
+    // $("#ref_num_search_search_btn").click(function() {
+    $("#ref_num_search_frm").submit(function(e) {
+        e.preventDefault();
         let ref_number = $("#ref_num_search").val();
         if (ref_number == "") {
             alert("Please enter correct Ref. number")
@@ -121,7 +126,7 @@
                             output += "<tr><td><a class='text-decoration-none' href=/tracking/" + new_data[i].c_note_number + " target='_blank'>" + new_data[i].c_note_number + "</a></td><td>" + new_data[i].to_destination__name + "</td><td>" + new_data[i].ref_courier_name__name + "</td><td>" + '<input type="button" class="btn btn-warning btn-sm edit-btn" id="edit_booking" value="Edit" data-sid=' + new_data[i].id + '></td></tr>'
                             $("#tbody").html(output);
                         }
-                        document.querySelectorAll('.booked_data')[0].focus();
+                        $("h4[tabindex=0]").focus();
                     } else {
                         alert("No records found for this Ref. number");
                     }
