Add tracking history in

--- a/api/templates/tracking.html
+++ b/api/templates/tracking.html
@@ -97,7 +97,7 @@
         <div class="col-12">
             <div class="scrollme">
                 <table class="table table-striped table-responsive">
-                    <tbody>
+                    <tbody id="collected_tbody">
                         <tr>
                             <th class="tracking_head" colspan="5">Tracking Details</th>
                         </tr>
