--- a/api/templates/tracking_ajax.html
+++ b/api/templates/tracking_ajax.html
@@ -118,4 +118,75 @@
             }
         })
     })
+
+    // For C NOTE NUMBER wise search in load input    
+    $("#c_note_wise_search").submit(function(e) {
+        e.preventDefault()
+        let c_note_number = $("#c_note_search").val();
+        if (c_note_number == "") {
+            alert("Please enter correct C. Note number")
+        } else {
+            let token = $("input[name='csrfmiddlewaretoken']").val();
+            let output = "";
+            let my_data = {
+                c_note_number: c_note_number,
+                csrfmiddlewaretoken: token
+            }
+            $.ajax({
+                url: "{% url 'advance_search_by_c_note_load_in' %}",
+                method: "POST",
+                dataType: "json",
+                data: my_data,
+                success: function(data) {
+                    if (data.status == 1) {
+                        let new_data = data.data;
+                        console.log(new_data);
+                        for (i = 0; i < new_data.length; i++) {
+                            output += "<tr><td><a class='text-decoration-none' href=/tracking/" + new_data[i].c_note_number__c_note_number + " target='_blank'>" + new_data[i].c_note_number__c_note_number + "</a></td><td>" + new_data[i].d_from + "</td><td>" + new_data[i].remarks + "</td><td>" + '<input type="button" class="btn btn-warning btn-sm edit-btn" id="edit_booking" value="Edit" data-sid=' + new_data[i].id + '> <input type="button" class="btn btn-danger btn-sm delete-btn" id="delete_booking" value="Delete" data-sid=' + new_data[i].id + "></td></tr>"
+                        }
+                        $("#tbody").html(output);
+                        $("h4[tabindex=0]").focus();
+                    } else {
+                        alert("No records found for this consignment number");
+                    }
+                }
+            })
+        }
+
+    })
+
+    // For C NOTE NUMBER wise search
+    // $("#ref_num_search_search_btn").click(function() {
+    $("#ref_num_search_frm").submit(function(e) {
+        e.preventDefault();
+        let ref_number = $("#ref_num_search").val();
+        if (ref_number == "") {
+            alert("Please enter correct Ref. number")
+        } else {
+            let token = $("input[name='csrfmiddlewaretoken']").val();
+            let output = "";
+            let my_data = {
+                ref_number: ref_number,
+                csrfmiddlewaretoken: token
+            }
+            $.ajax({
+                url: "{% url 'advance_search_for_ref_number' %}",
+                method: "POST",
+                dataType: "json",
+                data: my_data,
+                success: function(data) {
+                    if (data.status == 1) {
+                        let new_data = data.data;
+                        for (i = 0; i < new_data.length; i++) {
+                            output += "<tr><td><a class='text-decoration-none' href=/tracking/" + new_data[i].c_note_number + " target='_blank'>" + new_data[i].c_note_number + "</a></td><td>" + new_data[i].to_destination__name + "</td><td>" + new_data[i].ref_courier_name__name + "</td><td>" + '<input type="button" class="btn btn-warning btn-sm edit-btn" id="edit_booking" value="Edit" data-sid=' + new_data[i].id + '></td></tr>'
+                        }
+                        $("#tbody").html(output);
+                        $("h4[tabindex=0]").focus();
+                    } else {
+                        alert("No records found for this Ref. number");
+                    }
+                }
+            })
+        }
+    })
 </script>
