--- a/api/templates/tracking_history.html
+++ b/api/templates/tracking_history.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}{% block title %}Tracking history{% endblock title %}{% block content %}
 
-<div class="container mt-5">
+<div class="container mt-5 back_color">
     <div class="row mt-5">
         <div class="col-md-6">
             <h4 class="alert alert-primary mt-3 text-center">Load Input</h4>
@@ -40,7 +40,7 @@
                         <textarea class="form-control" name="remarks" id="remarks" rows="3"></textarea>
                     </div>
                 </div>
-                <div class="row px-4 mt-4">
+                <div class="row px-4 mt-4 mb-4">
                     <!-- <div class="col-md-12"> -->
                     <button type="submit" class="btn btn-success" class="save_btn" id="save_btn">Save</button>
                     <!-- </div> -->
@@ -50,7 +50,7 @@
         </div>
 
         <div class="col-md-6">
-            <h4 class="alert alert-primary mt-3 text-center">Input Load Details</h4>
+            <h4 class="alert alert-primary mt-3 text-center" tabindex="0">Input Load Details</h4>
             <div class="table-responsive">
                 <table class="table table-hover table-bordered table-sm booked_data">
                     <thead>
@@ -79,8 +79,58 @@
         </div>
 
     </div>
+    <div class="row text-center">
+        <hr>
+        <h3 class="text-center"><b>Advance Filters</b></h3>
+        <form method="post" class="g-3" id="datewise_form">
+            {% csrf_token %}
+            <div class="row justify-content-evenly mx-2 border border-1 p-2">
+                <div class="col-md-4">
+                    <label for="from_datetime"><b>From Date</b></label>
+                    <input type="date" id="from_datetime" name="from_datetime" class="form-control" name="date-field" />
+                </div>
+                <div class="col-md-4">
+                    <label for="to_datetime"><b>To Date</b></label>
+                    <input type="date" id="to_datetime" name="to_datetime" class="form-control" name="date-field" />
+                </div>
+                <div class="col-md-2 mt-4 d-grid gap-2 mb-3">
+                    <input type="button" id="date_search_btn" class="btn btn-success date_search_btn" value="Search">
+                </div>
+            </div>
+        </form>
+        <div class="col-md-6 mt-2">
+            <form method="post" class="g-3" id="c_note_wise_search">
+                {% csrf_token %}
+                <div class="row justify-content-evenly mx-1 border border-1 p-2">
+                    <div class="col-md-8">
+                        <label for="c_note_search"><b>C Note Number</b></label>
+                        <input type="text" id="c_note_search" name="c_note_search" class="form-control" required />
+                    </div>
+                    <div class="col-md-3 mt-4 d-grid gap-2 mb-3">
+                        <!-- <input type="button" id="c_note_search_btn" class="btn btn-success c_note_search_btn" value="Search"> -->
+                        <button type="submit" id="c_note_search_btn" class="btn btn-success c_note_search_btn">Search</button>
+                    </div>
+                </div>
+            </form>
 
-</div>
+        </div>
+        <div class="col-md-6 mt-2">
+            <form method="post" class="g-3" id="ref_num_search_frm">
+                {% csrf_token %}
+                <div class="row justify-content-evenly mx-1 border border-1 p-2">
+                    <div class="col-md-8">
+                        <label for="ref_num_search"><b>Ref. Number</b></label>
+                        <input type="text" id="ref_num_search" name="ref_num_search" class="form-control" required/>
+                    </div>
+                    <div class="col-md-3 mt-4 d-grid gap-2 mb-3">
+                        <!-- <input type="button" id="ref_num_search_search_btn" class="btn btn-success ref_num_search_search_btn" value="Search"> -->
+                        <button type="submit" id="ref_num_search_search_btn" class="btn btn-success ref_num_search_search_btn">Search</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+
+    </div>
 
 </div>
 <script>
