added data in frontend

--- a/api/templates/aboutus.html
+++ b/api/templates/aboutus.html
@@ -17,26 +17,29 @@
             <h5 class="service_p">About Airpost Xpress</h5>
             <h2>Courier & Logistic Solutions</h2>
             <hr class="line_for_about_us">
-            <p class="mt-5">Vel sagittis quam sodales sed. Erat porta nunc, amet malesuada consequat blandit sit. Ac amet, orci, gravida vulputate hendrerit vitae feugiat ultrices. Ornare netus accumsan, felis vitae, mauris iaculis semper viverra. </p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima et non nam aliquid eos, iure, praesentium, exercitationem voluptatem odio inventore sunt molestias pariatur aperiam velit maxime iusto est ratione qui.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit sit voluptate voluptatum dolorem! Excepturi quaerat quisquam consequatur assumenda, reprehenderit, corporis hic ratione beatae, et impedit quis voluptatum natus sunt quae.</p>
+            <p class="mt-4">Courier and logistics services provide fast, reliable, and cost-effective solutions for businesses and individuals who need to send packages and goods. With a range of services that include local and international shipping, parcel delivery,
+                freight forwarding, and e-commerce solutions, courier companies are essential for businesses of all sizes that need to transport products to customers around the world. Air shipping is a particularly popular option for time-sensitive shipments,
+                as it offers the fastest delivery times and global reach. </p>
+            <p>In addition to shipping services, many courier companies also offer warehousing and fulfillment solutions, enabling businesses to store their products in secure facilities and handle all aspects of the order fulfillment process. Whether you're
+                shipping a single package or managing a complex logistics operation, courier and logistics services can help streamline your supply chain and ensure your products reach their destination safely and on time.</p>
         </div>
-        <div class="col-md-6 mt-1">
+        <div class="col-md-6 mt-4">
             <img src="{% static '\img\about_us_first.jpg' %}" alt="" class="img-fluid rounded-5">
         </div>
 
     </div>
     <div class="row mt-5 back_color_about_us rounded-start-5">
-        <div class="col-md-6">
+        <div class="col-md-6 mt-4">
             <img src="{% static '\img\how_we_work.jpg' %}" alt="" class="img-fluid rounded-5">
         </div>
         <div class="col-md-6 mt-4">
             <h5 class="service_p">Work</h5>
             <h2>How We Work</h2>
             <hr class="line_for_about_us">
-            <p class="mt-5">Vel sagittis quam sodales sed. Erat porta nunc, amet malesuada consequat blandit sit. Ac amet, orci, gravida vulputate hendrerit vitae feugiat ultrices. Ornare netus accumsan, felis vitae, mauris iaculis semper viverra. </p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima et non nam aliquid eos, iure, praesentium, exercitationem voluptatem odio inventore sunt molestias pariatur aperiam velit maxime iusto est ratione qui.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit sit voluptate voluptatum dolorem! Excepturi quaerat quisquam consequatur assumenda, reprehenderit, corporis hic ratione beatae, et impedit quis voluptatum natus sunt quae.</p>
+            <p class="mt-4">Courier and logistics services operate by facilitating the transportation and delivery of packages from one location to another. When a customer places an order for shipping, the courier company prepares the package for shipment, including
+                packing it securely and selecting the appropriate shipping method. The company then arranges for transportation of the package, whether by land, air, or sea. Throughout the transportation process, the customer can track the status of their
+                shipment in real time. Once the package arrives at its destination, it is delivered to the recipient's address by specialized personnel or vehicles. The courier company provides proof of delivery, such as an electronic signature or confirmation,
+                to the customer. Throughout the entire process, the courier and logistics company is committed to providing exceptional customer service and ensuring a positive experience for its customers.</p>
         </div>
     </div>
     <hr>
@@ -83,7 +86,8 @@
             <h5 class="service_p">Team</h5>
             <h1>With a Professional Team</h1>
             <hr class="line_for">
-            <p>Vel sagittis quam sodales sederat porta nunc amet malesuada consequat blandit sitac amet orci gravida vulputate</p>
+            <p>At our courier and logistics company, we take pride in our team of professionals who are dedicated to providing exceptional service to our customers. Our team is made up of experienced logistics experts, drivers, and customer service representatives
+                who are committed to ensuring that every package is delivered on time and in perfect condition. We believe that our team is the key to our success.</p>
         </div>
     </div>
 
@@ -107,8 +111,8 @@
                 </div>
                 <div class="col-md-6 px-3 mt-5">
                     <h3>Shyam Kumar</h3>
-                    <h6 class="text-danger">FOUNDER & CEO AIRPOST XPRESS</h6>
-                    <p>Vel sagittis quam sodales sederat porta nunamet males uada cons equat blandit sitac amet orci gra vida vulputate.</p>
+                    <h6 class="text-danger mt-4">FOUNDER & CEO AIRPOST XPRESS</h6>
+                    <p class="mt-4">Vel sagittis quam sodales sederat porta nunamet males uada cons equat blandit sitac amet orci gra vida vulputate.</p>
                 </div>
             </div>
         </div>
