--- a/api/templates/contactus.html
+++ b/api/templates/contactus.html
@@ -5,8 +5,12 @@
         <div class="col-md-5 text-white mt-5">
             <h1>Contact us</h1>
             <h3 class="mt-3">whenever & wherever you need it.</h3>
-            <p class="mt-2">Our approach is to provide fast and effective solutions using a methodological structure that has been proven to increase efficiency, reduce costs and protect our clients in terms of their supply chain.</p>
-            <p>For complaint and business related queries, Please fill out this form and one of our executive will reach out to you shortly.</p>
+            <p class="mt-2">We welcome all inquiries and questions from our valued customers and website visitors. Our team is available to assist you with any issues or concerns you may have, or to provide more information about our services. You can reach us through
+                a variety of channels, including by phone, email, or by filling out a contact form on our website.</p>
+            <p> We strive to respond to all inquiries promptly, and our customer service representatives are knowledgeable and friendly. If you have questions about a specific shipment, please have your tracking number ready so we can assist you more efficiently.
+                Additionally, we appreciate any feedback you may have about our services, as we are always looking for ways to improve and provide the best possible experience to our customers. We value your business and look forward to hearing from you
+                soon.
+            </p>
         </div>
         <div class="col-md-5 mt-4">
             {% if return_message %}
