--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -25,11 +25,20 @@
             <div class="col-md-5 mt-5">
                 <h1>Welcome to Airpost Xpress</h1>
                 <h4>Your Trusted Partner</h4><br>
-                <p>Airpost Xpress is known for their fast-paced, reliable, and efficient delivery systems. we are not only deliver goods and parcels but also transport feelings, emotions, affection, and curiosity.<br><br>Anytime, anywhere and on time, this
-                    is what our service means<br> Give us the honor to serve you.</p>
+                <p>With years of experience in the industry, we understand the importance of delivering your goods on time, every time.
+                    <br><br>We offer a wide range of services, including:
+                    <ul>
+                        <li>Local and international shipping</li>
+                        <li>Parcel delivery</li>
+                        <li>Freight forwarding</li>
+                        <li>Customs brokerage</li>
+                        <li>Warehousing and distribution</li>
+                    </ul>
+                    At Airpost Xpress, we know that every customer is unique, which is why we offer customized solutions to meet your specific needs. Our goal is to make shipping and logistics as easy and stress-free as possible for customer.
+                </p>
                 <!-- <img src="{% static 'img/home_img.png' %}" class="img-fluid" alt="AIRPOST XPRESS"> -->
             </div>
-            <div class="col-md-5">
+            <div class="col-md-6 mt-5">
                 <img src="{%static 'img\first_pic.jpg'%}" class="img-fluid" alt="">
             </div>
         </div>
@@ -41,9 +50,9 @@
                 <img src="{%static 'img\second_img.jpg'%}" class="img-fluid" alt="">
                 <!-- <img src="{% static 'img/home_img.png' %}" class="img-fluid" alt="AIRPOST XPRESS"> -->
             </div>
-            <div class="col-md-5 mt-5">
+            <div class="col-md-6 mt-5">
                 <h1>Do You Want A Fast Service? Just Contact Us.</h1>
-                <p>With the progress of time and technology, distance is not too large for you to send a package over to your loved ones, From one end of the world to the other, there’s no losing out on sending a token of love to your loved ones.</p>
+                <p>If you're ready to experience the difference, we invite you to get in touch with us today. You can reach us by phone, email, or through our website to request a quote or learn more about our services.</p>
                 <div class="row justify-content-center">
                     <div class="col-12 text-center">
                         <button type="button" class="btn btn-primary" onclick="location.href='https://api.whatsapp.com/send?phone=919529486594&text=Hello Airpost Xpress, I need super fast courier service, please contact me as soon as possible.'"><i class="bi bi-whatsapp"></i> +91 9529486594</button>
@@ -60,7 +69,7 @@
             <div class="col-md-4 mt-5 text-center">
                 <h1 class="fafa_icon_font"><i class="bi bi-truck"></i></h1>
                 <h3>Swift Delivery</h3>
-                <p>Airpost Xpress is the name; efficient and super-fast delivery is our game, Feel the experience of swift deliveries with Us</p>
+                <p>Airpost Xpress is the name, efficient and super-fast delivery is our game, Feel the experience of swift deliveries with Us</p>
             </div>
             <div class="col-md-4 mt-5 text-center">
                 <h1 class="fafa_icon_font"><i class="bi bi-bookmark-check"></i></h1>
