--- a/api/templates/services.html
+++ b/api/templates/services.html
@@ -17,7 +17,8 @@
             <h5 class="service_p">We Provide</h5>
             <h1>Courier & Logistic Services</h1>
             <hr class="line_for">
-            <p>jhgfc njhgfc kjuyhgcf vkluytgfc likuytgfc nlkuytgfrdxkjbf kfgwhg fFDH fgf </p>
+            <p>We provide fast, reliable, and cost-effective solutions for businesses and individuals who needs to send packages and goods, with wide range of services that include local and international shipping, parcel delivery, freight forwarding, and
+                e-commerce solutions, courier companies are essential for businesses of all sizes that needs to transport their products to customers around the world. </p>
         </div>
 
     </div>
@@ -32,31 +33,31 @@
         <div class="col-md-3 card-style2 mt-2 px-0 pt-0">
             <img src="{% static '\img\services.jpg' %}" alt="" class="img-fluid mt-2 img-border">
             <h5 class="mt-2">BY AIR</h5>
-            <p class="mt-3">hgfd kjhgfjkhgf ,bdv agfad HJDVFAD FJHDVFhsdhjadvsf</p>
+            <p class="mt-3">At our courier and logistics company, we offer air services to provide our customers with fast and reliable shipping options for their packages.</p>
         </div>
         <div class="col-md-3 card-style mt-2 px-0 pt-0">
-            <img src="{% static '\img\services.jpg' %}" alt="" class="img-fluid mt-2 img-border">
+            <img src="{% static '\img\surface.jpg' %}" alt="" class="img-fluid mt-2 img-border">
             <h5 class="mt-2">BY SURFACE</h5>
-            <p class="mt-3">hgfd kjhgfjkhgf ,bdv agfad HJDVFAD FJHDVFhsdhjadvsf</p>
+            <p class="mt-3">In addition to our air services, we also offer reliable and cost-effective surface services for shipping packages across the country.</p>
         </div>
     </div>
 </div>
 <div class="container mt-3 mb-5">
     <div class="row justify-content-evenly">
         <div class="col-md-3 card-style2 mt-2 px-0 pt-0">
-            <img src="{% static '\img\services.jpg' %}" alt="" class="img-fluid mt-2 img-border">
+            <img src="{% static '\img\door_to_door.jpg' %}" alt="" class="img-fluid mt-2 img-border">
             <h5 class="mt-2">DOOR TO DOOR</h5>
-            <p class="mt-3">hgfd kjhgfjkhgf ,bdv agfad HJDVFAD FJHDVFhsdhjadvsf</p>
+            <p class="mt-3">We understand that convenience is key when it comes to shipping packages, which is why we offer door-to-door services to make shipping as easy and stress-free as possible. </p>
         </div>
         <div class="col-md-3 card-style mt-2 px-0 pt-0">
             <img src="{% static '\img\services.jpg' %}" alt="" class="img-fluid mt-2 img-border">
             <h5 class="mt-2">E-COMMERCE</h5>
-            <p class="mt-3">hgfd kjhgfjkhgf ,bdv agfad HJDVFAD FJHDVFhsdhjadvsf</p>
+            <p class="mt-3">Our e-commerce services are designed to integrate seamlessly with your online store, providing you with a hassle-free shipping solution.</p>
         </div>
         <div class="col-md-3 card-style2 mt-2 px-0 pt-0">
             <img src="{% static '\img\services.jpg' %}" alt="" class="img-fluid mt-2 img-border">
             <h5 class="mt-2">DEDICATED SERVICE</h5>
-            <p class="mt-3">hgfd kjhgfjkhgf ,bdv agfad HJDVFAD FJHDVFhsdhjadvsf</p>
+            <p class="mt-3">Our dedicated services provide you with a dedicated fleet of drivers and vehicles, as well as customized logistics solutions to meet your specific requirements.</p>
         </div>
     </div>
 </div>
@@ -67,11 +68,12 @@
             <p class="service_p mt-2">COVID 19</p>
             <h2>Staying ahead of the</h2><br>
             <h2 class="service_covid">COVID 19 <span class="black_color">situation</span></h2>
-            <p class="mt-5">Vel sagittis quam sodales sed. Erat porta nunc, amet malesuada consequat blandit sitac amet orci gravida vulputate hendrerit vitae feugiat ultrices ornare netus accumsan felis vitae iaculis semper quam sodales sed. Erat porta nunc, amet malesuada
-                consequat hendrerit vitae feugiat ultrices.</p>
-
-            <p class="mt-5">Vel sagittis quam sodales sed. Erat porta nunc, amet malesuada consequat blandit sitac amet orci gravida vulputate hendrerit vitae feugiat ultrices ornare netus accumsan felis vitae iaculis semper quam sodales sed. Erat porta nunc, amet malesuada
-                consequat hendrerit vitae feugiat ultrices.</p>
+            <p class="mt-4">During the COVID-19 pandemic, we are committed to providing essential shipping and logistics services to support individuals and businesses in need. Our team of logistics experts are working tirelessly to ensure that your packages are delivered
+                safely and securely, while following all necessary health and safety protocols. We have implemented strict hygiene measures, including frequent sanitization of our vehicles and facilities, as well as the use of personal protective equipment
+                by our drivers and staff. We are also offering contactless delivery options, to minimize physical contact and reduce the risk of transmission.</p>
+            <p>Our services are essential for businesses and individuals who need to ship critical supplies, including medical equipment, pharmaceuticals, and personal protective equipment. We understand that this is a challenging time for everyone, and
+                we are committed to doing our part to support our communities and ensure that essential goods are delivered safely and efficiently. With our COVID-19 response services, you can have peace of mind knowing that your shipments are being handled
+                with the utmost care and attention to detail.</p>
         </div>
         <div class="col-md-6">
             <img src="{% static '\img\service_second.jpg' %}" alt="" class="img-fluid img_height">
