Completed load in page

--- a/api/templates/aboutus.html
+++ b/api/templates/aboutus.html
@@ -29,17 +29,17 @@
 
     </div>
     <div class="row mt-5 back_color_about_us rounded-start-5">
-        <div class="col-md-6 mt-4">
+        <div class="col-md-6 px-0">
             <img src="{% static '\img\how_we_work.jpg' %}" alt="" class="img-fluid rounded-5">
         </div>
         <div class="col-md-6 mt-4">
             <h5 class="service_p">Work</h5>
             <h2>How We Work</h2>
             <hr class="line_for_about_us">
-            <p class="mt-4">Courier and logistics services operate by facilitating the transportation and delivery of packages from one location to another. When a customer places an order for shipping, the courier company prepares the package for shipment, including
-                packing it securely and selecting the appropriate shipping method. The company then arranges for transportation of the package, whether by land, air, or sea. Throughout the transportation process, the customer can track the status of their
-                shipment in real time. Once the package arrives at its destination, it is delivered to the recipient's address by specialized personnel or vehicles. The courier company provides proof of delivery, such as an electronic signature or confirmation,
-                to the customer. Throughout the entire process, the courier and logistics company is committed to providing exceptional customer service and ensuring a positive experience for its customers.</p>
+            <p class="mt-4">Courier and logistics services operate by facilitating the transportation and delivery of packages from one location to another. When a customer places an order for shipping, the courier company prepares the package for shipment. The company
+                then arranges for transportation of the package, whether by land, air, or sea. During the transportation process, the customer can track the status of their shipment in real time. Once the package arrives at its destination, it is delivered
+                to the recipient's address by delivery staff. The courier company provides proof of delivery, such as an electronic signature or confirmation, to the customer. Throughout the entire process, the courier and logistics company is committed
+                to providing exceptional customer service to its customers.</p>
         </div>
     </div>
     <hr>
@@ -72,8 +72,8 @@
                     <h1><i class="bi bi-truck text-danger"></i></h1>
                 </div>
                 <div class="col-9">
-                    <h1 class="text-danger">30+</h1>
-                    <p></p>
+                    <h1 class="text-danger">100+</h1>
+                    <p>Branches world wide</p>
                 </div>
             </div>
         </div>
@@ -86,8 +86,8 @@
             <h5 class="service_p">Team</h5>
             <h1>With a Professional Team</h1>
             <hr class="line_for">
-            <p>At our courier and logistics company, we take pride in our team of professionals who are dedicated to providing exceptional service to our customers. Our team is made up of experienced logistics experts, drivers, and customer service representatives
-                who are committed to ensuring that every package is delivered on time and in perfect condition. We believe that our team is the key to our success.</p>
+            <p>We take pride in our team of professionals who are dedicated to providing exceptional service to our customers.<br> Our team is made up of experienced logistics experts, drivers, and customer service representatives who are committed to ensuring
+                that every package is delivered <br>on time and in perfect condition. We believe that our team is the key to our success.</p>
         </div>
     </div>
 
@@ -100,7 +100,7 @@
                 <div class="col-md-6 px-3 mt-5">
                     <h3>Ram Kumar</h3>
                     <h6 class="text-danger mt-4">FOUNDER & CEO AIRPOST XPRESS</h6>
-                    <p class="mt-4">Vel sagittis quam sodales sederat porta nunamet males uada cons equat blandit sitac amet orci gra vida vulputate.</p>
+                    <p class="mt-4">Ram Kumar is the founder of Airpost Xpress, one of the world's largest courier companies. He founded Airpost Xpress with the idea of creating a system for overnight delivery of packages.</p>
                 </div>
             </div>
         </div>
@@ -112,7 +112,8 @@
                 <div class="col-md-6 px-3 mt-5">
                     <h3>Shyam Kumar</h3>
                     <h6 class="text-danger mt-4">FOUNDER & CEO AIRPOST XPRESS</h6>
-                    <p class="mt-4">Vel sagittis quam sodales sederat porta nunamet males uada cons equat blandit sitac amet orci gra vida vulputate.</p>
+                    <p class="mt-4">Shyam Kumar is also the founder of Airpost Xpress, one of the world's largest courier companies. He founded this to start a small messenger service in India. His vision was to create a company that could deliver packages faster and
+                        more efficiently.</p>
                 </div>
             </div>
         </div>
