--- a/api/templates/tracking_history.html
+++ b/api/templates/tracking_history.html
@@ -94,7 +94,7 @@
                     <input type="date" id="to_datetime" name="to_datetime" class="form-control" name="date-field" />
                 </div>
                 <div class="col-md-2 mt-4 d-grid gap-2 mb-3">
-                    <input type="button" id="date_search_btn" class="btn btn-success date_search_btn" value="Search">
+                    <input type="submit" id="date_search_btn" class="btn btn-success date_search_btn" value="Search">
                 </div>
             </div>
         </form>
