--- a/api/templates/network.html
+++ b/api/templates/network.html
@@ -43,7 +43,7 @@
                         <br><b>Pincode:</b> {{ office.pincode }}
                         <br><b>Country:</b> {{ office.country }}
                         <br><b>Office number:</b> <a class="text-decoration-none" href="tel:{{ office.office_number }}">{{ office.office_number }}</a>
-                        <br><b>Laneline number:</b> <a class="text-decoration-none" href="tel:{{ office.office_lane_line_number }}">{{ office.office_lane_line_number }}</a>
+                        <br><b>Landline number:</b> <a class="text-decoration-none" href="tel:{{ office.office_lane_line_number }}">{{ office.office_lane_line_number }}</a>
                         <br><b>Address:</b><br>{{ office.address }}
 
                     </p>
@@ -96,7 +96,7 @@
                         <br><b>Pincode:</b> {{ office.pincode }}
                         <br><b>Country:</b> {{ office.country }}
                         <br><b>Office number:</b> <a class="text-decoration-none" href="tel:{{ office.office_number }}">{{ office.office_number }}</a>
-                        <br><b>Laneline number:</b> <a class="text-decoration-none" href="tel:{{ office.office_lane_line_number }}">{{ office.office_lane_line_number }}</a>
+                        <br><b>Landline number:</b> <a class="text-decoration-none" href="tel:{{ office.office_lane_line_number }}">{{ office.office_lane_line_number }}</a>
                         <br><b>Address:</b><br>{{ office.address }}
 
                     </p>
