--- a/api/templates/services.html
+++ b/api/templates/services.html
@@ -27,18 +27,18 @@
     <div class="row justify-content-evenly">
         <div class="col-md-3 card-style mt-2 px-0 pt-0">
             <img src="{% static '\img\services.jpg' %}" alt="" class="img-fluid mt-2 img-border">
-            <h5 class="mt-2">AIRPPOST XPRESS SPECIAL</h5>
-            <p class="mt-3">hgfd kjhgfjkhgf ,bdv agfad HJDVFAD FJHDVFhsdhjadvsf</p>
+            <h5 class="mt-2">AIRPOST XPRESS SPECIAL</h5>
+            <p class="mt-3 px-1">We provide time bound service with money back gaurantee.</p>
         </div>
         <div class="col-md-3 card-style2 mt-2 px-0 pt-0">
             <img src="{% static '\img\services.jpg' %}" alt="" class="img-fluid mt-2 img-border">
             <h5 class="mt-2">BY AIR</h5>
-            <p class="mt-3">At our courier and logistics company, we offer air services to provide our customers with fast and reliable shipping options for their packages.</p>
+            <p class="mt-3 px-1">At our courier and logistics company, we offer air services to provide our customers with fast and reliable shipping options for their packages.</p>
         </div>
         <div class="col-md-3 card-style mt-2 px-0 pt-0">
             <img src="{% static '\img\surface.jpg' %}" alt="" class="img-fluid mt-2 img-border">
             <h5 class="mt-2">BY SURFACE</h5>
-            <p class="mt-3">In addition to our air services, we also offer reliable and cost-effective surface services for shipping packages across the country.</p>
+            <p class="mt-3 px-1">In addition to our air services, we also offer reliable and cost-effective surface services for shipping packages across the country.</p>
         </div>
     </div>
 </div>
@@ -47,7 +47,7 @@
         <div class="col-md-3 card-style2 mt-2 px-0 pt-0">
             <img src="{% static '\img\door_to_door.jpg' %}" alt="" class="img-fluid mt-2 img-border">
             <h5 class="mt-2">DOOR TO DOOR</h5>
-            <p class="mt-3">We understand that convenience is key when it comes to shipping packages, which is why we offer door-to-door services to make shipping as easy and stress-free as possible. </p>
+            <p class="mt-3 px-1">We understand that convenience is key when it comes to shipping packages, which is why we offer door-to-door services to make shipping as easy and stress-free as possible. </p>
         </div>
         <div class="col-md-3 card-style mt-2 px-0 pt-0">
             <img src="{% static '\img\services.jpg' %}" alt="" class="img-fluid mt-2 img-border">
@@ -56,8 +56,8 @@
         </div>
         <div class="col-md-3 card-style2 mt-2 px-0 pt-0">
             <img src="{% static '\img\services.jpg' %}" alt="" class="img-fluid mt-2 img-border">
-            <h5 class="mt-2">DEDICATED SERVICE</h5>
-            <p class="mt-3">Our dedicated services provide you with a dedicated fleet of drivers and vehicles, as well as customized logistics solutions to meet your specific requirements.</p>
+            <h5 class="mt-2">INTERNATIONAL SERVICE</h5>
+            <p class="mt-3">We provide these services to meet the needs of customers, including express delivery for urgent shipments, economy delivery for less time-sensitive items, and tracking and insurance for added security.</p>
         </div>
     </div>
 </div>
