--- a/api/templates/tracking_ajax.html
+++ b/api/templates/tracking_ajax.html
@@ -53,7 +53,7 @@
                 if (data.status == 1) {
                     let new_data = data.data;
                     for (let i = 0; i < new_data.length; i++) {
-                        output += "<tr><td><a class='text-decoration-none' href=/tracking_page/" + new_data[i].c_note_number__c_note_number + "target='_blank'>" + new_data[i].c_note_number__c_note_number + "</a></td><td>" + new_data[i].d_from__name + "</td><td>" + new_data[i].remarks + "</td><td><input type='button' class='btn btn-warning btn-sm edit-btn' id='edit_booking' value='Edit' data-sid=" + new_data[i].id + "> <input type='button' class='btn btn-danger btn-sm delete-btn' id='delete_booking' value='Delete' data-sid=" + new_data[i].id + "></td></tr>"
+                        output += "<tr><td><a class='text-decoration-none' href=/tracking/" + new_data[i].c_note_number__c_note_number + " target='_blank'>" + new_data[i].c_note_number__c_note_number + "</a></td><td>" + new_data[i].d_from__name + "</td><td>" + new_data[i].remarks + "</td><td><input type='button' class='btn btn-warning btn-sm edit-btn' id='edit_booking' value='Edit' data-sid=" + new_data[i].id + "> <input type='button' class='btn btn-danger btn-sm delete-btn' id='delete_booking' value='Delete' data-sid=" + new_data[i].id + "></td></tr>"
                     }
                     $("#tbody").html(output);
                     $("#c_note_number").val("");
@@ -161,7 +161,7 @@
         e.preventDefault();
         let ref_number = $("#ref_num_search").val();
         if (ref_number == "") {
-            alert("Please enter correct Ref. number")
+            alert("Please enter correct Ref. number");
         } else {
             let token = $("input[name='csrfmiddlewaretoken']").val();
             let output = "";
@@ -170,7 +170,7 @@
                 csrfmiddlewaretoken: token
             }
             $.ajax({
-                url: "{% url 'advance_search_for_ref_number' %}",
+                url: "{% url 'advance_search_by_ref_num_load_in' %}",
                 method: "POST",
                 dataType: "json",
                 data: my_data,
@@ -178,15 +178,56 @@
                     if (data.status == 1) {
                         let new_data = data.data;
                         for (i = 0; i < new_data.length; i++) {
-                            output += "<tr><td><a class='text-decoration-none' href=/tracking/" + new_data[i].c_note_number + " target='_blank'>" + new_data[i].c_note_number + "</a></td><td>" + new_data[i].to_destination__name + "</td><td>" + new_data[i].ref_courier_name__name + "</td><td>" + '<input type="button" class="btn btn-warning btn-sm edit-btn" id="edit_booking" value="Edit" data-sid=' + new_data[i].id + '></td></tr>'
+                            output += "<tr><td><a class='text-decoration-none' href=/tracking/" + new_data[i].c_note_number__c_note_number + " target='_blank'>" + new_data[i].c_note_number__c_note_number + "</a></td><td>" + new_data[i].d_from + "</td><td>" + new_data[i].remarks + "</td><td>" + '<input type="button" class="btn btn-warning btn-sm edit-btn" id="edit_booking" value="Edit" data-sid=' + new_data[i].id + '> <input type="button" class="btn btn-danger btn-sm delete-btn" id="delete_booking" value="Delete" data-sid=' + new_data[i].id + "></td></tr>"
                         }
                         $("#tbody").html(output);
                         $("h4[tabindex=0]").focus();
                     } else {
-                        alert("No records found for this Ref. number");
+                        alert("No records found for this consignment number");
                     }
                 }
             })
+        }
+    })
+
+    // For datewise search load in
+    $("#datewise_form").submit(function(e) {
+        e.preventDefault()
+        let from_date = $("#from_datetime").val();
+        let to_date = $("#to_datetime").val();
+        let token = $("input[name='csrfmiddlewaretoken']").val();
+        let my_data = {
+            from_date: from_date,
+            to_date: to_date,
+            csrfmiddlewaretoken: token
+        };
+        let output = "";
+
+        if (from_date && to_date) {
+            $.ajax({
+                url: "{% url 'advance_search_load_in_by_date' %}",
+                method: "POST",
+                dataType: "json",
+                data: my_data,
+                success: function(data) {
+                    if (data.status) {
+                        let new_data = data.data;
+                        if (new_data.length) {
+                            for (i = 0; i < new_data.length; i++) {
+                                output += "<tr><td><a class='text-decoration-none' href=/tracking/" + new_data[i].c_note_number__c_note_number + " target='_blank'>" + new_data[i].c_note_number__c_note_number + "</a></td><td>" + new_data[i].d_from + "</td><td>" + new_data[i].remarks + "</td><td>" + '<input type="button" class="btn btn-warning btn-sm edit-btn" id="edit_booking" value="Edit" data-sid=' + new_data[i].id + '> <input type="button" class="btn btn-danger btn-sm delete-btn" id="delete_booking" value="Delete" data-sid=' + new_data[i].id + "></td></tr>"
+                            }
+                            $("#tbody").html(output);
+                            $("h4[tabindex=0]").focus();
+                        } else {
+                            alert("Records not found in between dates.");
+                        }
+                    } else {
+                        alert("Records not found in between dates.");
+                    }
+                }
+            })
+        } else {
+            alert("Select correct dates.");
         }
     })
 </script>
