final with tracking in and out page

--- a/api/templates/tracking_history.html
+++ b/api/templates/tracking_history.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}{% block title %}Tracking history{% endblock title %}{% block content %}
+{% extends 'base.html' %}{% block title %}Load IN{% endblock title %}{% block content %}
 
 <div class="container mt-5 back_color">
     <div class="row mt-5">
@@ -15,7 +15,7 @@
                         <input type="datetime-local" id="datetime" name="datetime" class="form-control" name="date-field" />
                     </div>
                     <div class="col-md-6">
-                        <label for="from_destination"><b>From Destination</b>
+                        <label for="from_destination"><b>Destination In</b>
                             <span class="red_color">*</span>
                         </label>
                         <select class="form-select" name="from_destination" id="from_destination" aria-label="Default select example" required>
@@ -56,7 +56,7 @@
                     <thead>
                         <tr>
                             <th scope="col">C.N. number</th>
-                            <th scope="col">From destination</th>
+                            <th scope="col">Destination In</th>
                             <th scope="col">Remarks</th>
                             <th scope="col">Action</th>
                         </tr>
