--- a/api/templates/tracking_ajax.html
+++ b/api/templates/tracking_ajax.html
@@ -53,7 +53,8 @@
                 if (data.status == 1) {
                     let new_data = data.data;
                     for (let i = 0; i < new_data.length; i++) {
-                        output += "<tr><td><a class='text-decoration-none' href=/tracking/" + new_data[i].c_note_number__c_note_number + " target='_blank'>" + new_data[i].c_note_number__c_note_number + "</a></td><td>" + new_data[i].d_from__name + "</td><td>" + new_data[i].remarks + "</td><td><input type='button' class='btn btn-warning btn-sm edit-btn' id='edit_booking' value='Edit' data-sid=" + new_data[i].id + "> <input type='button' class='btn btn-danger btn-sm delete-btn' id='delete_booking' value='Delete' data-sid=" + new_data[i].id + "></td></tr>"
+                        output += "<tr><td><a class='text-decoration-none' href=/tracking/" + new_data[i].c_note_number__c_note_number +
+                            " target='_blank'>" + new_data[i].c_note_number__c_note_number + "</a></td><td>" + new_data[i].d_from__name + "</td><td>" + new_data[i].remarks + "</td><td><input type='button' class='btn btn-warning btn-sm edit-btn' id='edit_booking' value='Edit' data-sid=" + new_data[i].id + "> <input type='button' class='btn btn-danger btn-sm delete-btn' id='delete_booking' value='Delete' data-sid=" + new_data[i].id + "></td></tr>"
                     }
                     $("#tbody").html(output);
                     $("#c_note_number").val("");
@@ -67,7 +68,7 @@
         });
     });
 
-    // delete load input
+    // delete load input --------------------------------------
     $("table").on("click", ".delete-btn", function() {
         let id_of = $(this).attr("data-sid");
         let token = $("input[name='csrfmiddlewaretoken']").val();
@@ -91,7 +92,7 @@
         });
     })
 
-    // Edit load input
+    // Edit load input -----------------------------------
     $("table").on("click", ".edit-btn", function() {
         let id_of = $(this).attr("data-sid");
         let token = $("input[name='csrfmiddlewaretoken']").val();
@@ -119,7 +120,7 @@
         })
     })
 
-    // For C NOTE NUMBER wise search in load input    
+    // For C NOTE NUMBER wise search in load input ---------------------------------------------
     $("#c_note_wise_search").submit(function(e) {
         e.preventDefault()
         let c_note_number = $("#c_note_search").val();
@@ -142,7 +143,7 @@
                         let new_data = data.data;
                         console.log(new_data);
                         for (i = 0; i < new_data.length; i++) {
-                            output += "<tr><td><a class='text-decoration-none' href=/tracking/" + new_data[i].c_note_number__c_note_number + " target='_blank'>" + new_data[i].c_note_number__c_note_number + "</a></td><td>" + new_data[i].d_from + "</td><td>" + new_data[i].remarks + "</td><td>" + '<input type="button" class="btn btn-warning btn-sm edit-btn" id="edit_booking" value="Edit" data-sid=' + new_data[i].id + '> <input type="button" class="btn btn-danger btn-sm delete-btn" id="delete_booking" value="Delete" data-sid=' + new_data[i].id + "></td></tr>"
+                            output += "<tr><td><a class='text-decoration-none' href=/tracking/" + new_data[i].c_note_number__c_note_number + " target='_blank'>" + new_data[i].c_note_number__c_note_number + "</a></td><td>" + new_data[i].d_from__name + "</td><td>" + new_data[i].remarks + "</td><td>" + '<input type="button" class="btn btn-warning btn-sm edit-btn" id="edit_booking" value="Edit" data-sid=' + new_data[i].id + '> <input type="button" class="btn btn-danger btn-sm delete-btn" id="delete_booking" value="Delete" data-sid=' + new_data[i].id + "></td></tr>"
                         }
                         $("#tbody").html(output);
                         $("h4[tabindex=0]").focus();
@@ -155,8 +156,7 @@
 
     })
 
-    // For C NOTE NUMBER wise search
-    // $("#ref_num_search_search_btn").click(function() {
+    // For Ref NUMBER wise search -----------------------------------
     $("#ref_num_search_frm").submit(function(e) {
         e.preventDefault();
         let ref_number = $("#ref_num_search").val();
@@ -178,7 +178,7 @@
                     if (data.status == 1) {
                         let new_data = data.data;
                         for (i = 0; i < new_data.length; i++) {
-                            output += "<tr><td><a class='text-decoration-none' href=/tracking/" + new_data[i].c_note_number__c_note_number + " target='_blank'>" + new_data[i].c_note_number__c_note_number + "</a></td><td>" + new_data[i].d_from + "</td><td>" + new_data[i].remarks + "</td><td>" + '<input type="button" class="btn btn-warning btn-sm edit-btn" id="edit_booking" value="Edit" data-sid=' + new_data[i].id + '> <input type="button" class="btn btn-danger btn-sm delete-btn" id="delete_booking" value="Delete" data-sid=' + new_data[i].id + "></td></tr>"
+                            output += "<tr><td><a class='text-decoration-none' href=/tracking/" + new_data[i].c_note_number__c_note_number + " target='_blank'>" + new_data[i].c_note_number__c_note_number + "</a></td><td>" + new_data[i].d_from__name + "</td><td>" + new_data[i].remarks + "</td><td>" + '<input type="button" class="btn btn-warning btn-sm edit-btn" id="edit_booking" value="Edit" data-sid=' + new_data[i].id + '> <input type="button" class="btn btn-danger btn-sm delete-btn" id="delete_booking" value="Delete" data-sid=' + new_data[i].id + "></td></tr>"
                         }
                         $("#tbody").html(output);
                         $("h4[tabindex=0]").focus();
@@ -190,7 +190,7 @@
         }
     })
 
-    // For datewise search load in
+    // For datewise search load in ---------------------------------
     $("#datewise_form").submit(function(e) {
         e.preventDefault()
         let from_date = $("#from_datetime").val();
@@ -214,7 +214,7 @@
                         let new_data = data.data;
                         if (new_data.length) {
                             for (i = 0; i < new_data.length; i++) {
-                                output += "<tr><td><a class='text-decoration-none' href=/tracking/" + new_data[i].c_note_number__c_note_number + " target='_blank'>" + new_data[i].c_note_number__c_note_number + "</a></td><td>" + new_data[i].d_from + "</td><td>" + new_data[i].remarks + "</td><td>" + '<input type="button" class="btn btn-warning btn-sm edit-btn" id="edit_booking" value="Edit" data-sid=' + new_data[i].id + '> <input type="button" class="btn btn-danger btn-sm delete-btn" id="delete_booking" value="Delete" data-sid=' + new_data[i].id + "></td></tr>"
+                                output += "<tr><td><a class='text-decoration-none' href=/tracking/" + new_data[i].c_note_number__c_note_number + " target='_blank'>" + new_data[i].c_note_number__c_note_number + "</a></td><td>" + new_data[i].d_from__name + "</td><td>" + new_data[i].remarks + "</td><td>" + '<input type="button" class="btn btn-warning btn-sm edit-btn" id="edit_booking" value="Edit" data-sid=' + new_data[i].id + '> <input type="button" class="btn btn-danger btn-sm delete-btn" id="delete_booking" value="Delete" data-sid=' + new_data[i].id + "></td></tr>"
                             }
                             $("#tbody").html(output);
                             $("h4[tabindex=0]").focus();
