--- a/api/templates/tracking_out_ajax.html
+++ b/api/templates/tracking_out_ajax.html
@@ -1,32 +1,5 @@
 <script>
-    // For tracking document using selenium.
-    $("table").on("click", ".sele_data_1", function() {
-        let new_url = $(this).attr("data-sid");
-        let final_url = 'track_internal/' + new_url;
-        $(this).html("Fetching details...")
-        let output = "";
-        let my_this = this;
-        $.ajax({
-            url: final_url,
-            method: "GET",
-            dataType: "json",
-            success: function(data) {
-                let final_data = data.data;
-                if (data.status == 1) {
-                    output += "<tr> <th class='tracking_head' colspan='5'>Tracking Details</th></tr><tr><th>Date</th><th>From</th> <th>To</th><th>Status</th></tr>"
-                    for (i = 0; i < final_data.length; i++) {
-                        output += "<tr><td>" + final_data[i].Date + "</td><td>" + final_data[i].Location + "</td><td>" +
-                            final_data[i].Activity + "</td><td>" + final_data[i].CheckpointState + "</td></tr>";
-
-                    }
-                    $("#collected_tbody").html(output);
-                }
-            },
-        });
-
-    });
-
-    // Save Load input -------------------------------
+    // Save Load output -------------------------------
     $("#save_btn").click(function(e) {
         e.preventDefault();
         let id_of = $("#id_of").val();
@@ -45,7 +18,7 @@
             csrfmiddlewaretoken: token,
         };
         $.ajax({
-            url: "{% url 'save_input_load' %}",
+            url: "{% url 'save_output_load' %}",
             method: "POST",
             dataType: "json",
             data: final_data,
@@ -53,7 +26,7 @@
                 if (data.status == 1) {
                     let new_data = data.data;
                     for (let i = 0; i < new_data.length; i++) {
-                        output += "<tr><td><a class='text-decoration-none' href=/tracking_page/" + new_data[i].c_note_number__c_note_number + "target='_blank'>" + new_data[i].c_note_number__c_note_number + "</a></td><td>" + new_data[i].d_from__name + "</td><td>" + new_data[i].remarks + "</td><td><input type='button' class='btn btn-warning btn-sm edit-btn' id='edit_booking' value='Edit' data-sid=" + new_data[i].id + "> <input type='button' class='btn btn-danger btn-sm delete-btn' id='delete_booking' value='Delete' data-sid=" + new_data[i].id + "></td></tr>"
+                        output += "<tr><td><a class='text-decoration-none' href=/tracking/" + new_data[i].c_note_number__c_note_number + " target='_blank'>" + new_data[i].c_note_number__c_note_number + "</a></td><td>" + new_data[i].d_to__name + "</td><td>" + new_data[i].remarks + "</td><td><input type='button' class='btn btn-warning btn-sm edit-btn' id='edit_booking' value='Edit' data-sid=" + new_data[i].id + "> <input type='button' class='btn btn-danger btn-sm delete-btn' id='delete_booking' value='Delete' data-sid=" + new_data[i].id + "></td></tr>"
                     }
                     $("#tbody").html(output);
                     $("#c_note_number").val("");
@@ -91,7 +64,7 @@
         });
     })
 
-    // Edit load input
+    // Edit load output
     $("table").on("click", ".edit-btn", function() {
         let id_of = $(this).attr("data-sid");
         let token = $("input[name='csrfmiddlewaretoken']").val();
@@ -109,7 +82,7 @@
                     let new_data = data.data[0]
                     $("#id_of").val(new_data.id);
                     $("#datetime").val(new_data.in_out_datetime);
-                    $("#from_destination").val(new_data.d_from).change();
+                    $("#from_destination").val(new_data.d_to).change();
                     $("#c_note_number").val(new_data.c_note_number__c_note_number);
                     $("#remarks").val(new_data.remarks);
                 } else {
@@ -117,5 +90,116 @@
                 }
             }
         })
+    })
+
+    // For C NOTE NUMBER wise search in load output ---------------------------------------------
+    $("#c_note_wise_search").submit(function(e) {
+        e.preventDefault()
+        let c_note_number = $("#c_note_search").val();
+        if (c_note_number == "") {
+            alert("Please enter correct C. Note number")
+        } else {
+            let token = $("input[name='csrfmiddlewaretoken']").val();
+            let output = "";
+            let my_data = {
+                c_note_number: c_note_number,
+                csrfmiddlewaretoken: token
+            }
+            $.ajax({
+                url: "{% url 'advance_search_by_c_note_load_out' %}",
+                method: "POST",
+                dataType: "json",
+                data: my_data,
+                success: function(data) {
+                    if (data.status == 1) {
+                        let new_data = data.data;
+                        console.log(new_data);
+                        for (i = 0; i < new_data.length; i++) {
+                            output += "<tr><td><a class='text-decoration-none' href=/tracking/" + new_data[i].c_note_number__c_note_number + " target='_blank'>" + new_data[i].c_note_number__c_note_number + "</a></td><td>" + new_data[i].d_from__name + "</td><td>" + new_data[i].remarks + "</td><td>" + '<input type="button" class="btn btn-warning btn-sm edit-btn" id="edit_booking" value="Edit" data-sid=' + new_data[i].id + '> <input type="button" class="btn btn-danger btn-sm delete-btn" id="delete_booking" value="Delete" data-sid=' + new_data[i].id + "></td></tr>"
+                        }
+                        $("#tbody").html(output);
+                        $("h4[tabindex=0]").focus();
+                    } else {
+                        alert("No records found for this consignment number");
+                    }
+                }
+            })
+        }
+
+    })
+
+    // For Ref NUMBER wise search Load output -----------------------------------
+    $("#ref_num_search_frm").submit(function(e) {
+        e.preventDefault();
+        let ref_number = $("#ref_num_search").val();
+        if (ref_number == "") {
+            alert("Please enter correct Ref. number");
+        } else {
+            let token = $("input[name='csrfmiddlewaretoken']").val();
+            let output = "";
+            let my_data = {
+                ref_number: ref_number,
+                csrfmiddlewaretoken: token
+            }
+            $.ajax({
+                url: "{% url 'advance_search_by_ref_num_load_out' %}",
+                method: "POST",
+                dataType: "json",
+                data: my_data,
+                success: function(data) {
+                    if (data.status == 1) {
+                        let new_data = data.data;
+                        for (i = 0; i < new_data.length; i++) {
+                            output += "<tr><td><a class='text-decoration-none' href=/tracking/" + new_data[i].c_note_number__c_note_number + " target='_blank'>" + new_data[i].c_note_number__c_note_number + "</a></td><td>" + new_data[i].d_from__name + "</td><td>" + new_data[i].remarks + "</td><td>" + '<input type="button" class="btn btn-warning btn-sm edit-btn" id="edit_booking" value="Edit" data-sid=' + new_data[i].id + '> <input type="button" class="btn btn-danger btn-sm delete-btn" id="delete_booking" value="Delete" data-sid=' + new_data[i].id + "></td></tr>"
+                        }
+                        $("#tbody").html(output);
+                        $("h4[tabindex=0]").focus();
+                    } else {
+                        alert("No records found for this consignment number");
+                    }
+                }
+            })
+        }
+    })
+
+    // For datewise search load out ---------------------------------
+    $("#datewise_form").submit(function(e) {
+        e.preventDefault()
+        let from_date = $("#from_datetime").val();
+        let to_date = $("#to_datetime").val();
+        let token = $("input[name='csrfmiddlewaretoken']").val();
+        let my_data = {
+            from_date: from_date,
+            to_date: to_date,
+            csrfmiddlewaretoken: token
+        };
+        let output = "";
+
+        if (from_date && to_date) {
+            $.ajax({
+                url: "{% url 'advance_search_load_out_by_date' %}",
+                method: "POST",
+                dataType: "json",
+                data: my_data,
+                success: function(data) {
+                    if (data.status) {
+                        let new_data = data.data;
+                        if (new_data.length) {
+                            for (i = 0; i < new_data.length; i++) {
+                                output += "<tr><td><a class='text-decoration-none' href=/tracking/" + new_data[i].c_note_number__c_note_number + " target='_blank'>" + new_data[i].c_note_number__c_note_number + "</a></td><td>" + new_data[i].d_from__name + "</td><td>" + new_data[i].remarks + "</td><td>" + '<input type="button" class="btn btn-warning btn-sm edit-btn" id="edit_booking" value="Edit" data-sid=' + new_data[i].id + '> <input type="button" class="btn btn-danger btn-sm delete-btn" id="delete_booking" value="Delete" data-sid=' + new_data[i].id + "></td></tr>"
+                            }
+                            $("#tbody").html(output);
+                            $("h4[tabindex=0]").focus();
+                        } else {
+                            alert("Records not found in between dates.");
+                        }
+                    } else {
+                        alert("Records not found in between dates.");
+                    }
+                }
+            })
+        } else {
+            alert("Select correct dates.");
+        }
     })
 </script>
